# compile-sketches

./: .codespellrc  .ecrc  .flake8  .gitignore  .prettierignore  .yamllint.yml  Dockerfile  README.md  Taskfile.yml  action-setup.sh  action.yml  codecov.yml  entrypoint.sh  package-lock.json  package.json  pyproject.toml  pytest.ini
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml
.github/workflows/: check-action-metadata-task.yml  check-files-task.yml  check-general-formatting-task.yml  check-license.yml  check-markdown-task.yml  check-npm-task.yml  check-poetry-task.yml  check-prettier-formatting-task.yml  check-python-task.yml  check-taskfiles.yml  check-toc-task.yml  check-workflows-task.yml  check-yaml-task.yml  libraries_compile-examples.yml  lint-python.yml  lint-shell.yml  spell-check-task.yml  spell-check.yml  sync-labels-npm.yml  sync-labels.yml  test-integration.yml  test-python-poetry-task.yml  test-python.yml  validate-action_yml.yml
.github/workflows/testdata/reports/all-inputs/: arduino-avr-uno.json  esp8266-esp8266-huzzah.json
.github/workflows/testdata/sketches/ServoLibrary/: ServoLibrary.ino
.github/workflows/testdata/sketches/TestCompileFlags/: TestCompileFlags.ino
compilesketches/: .flake8  compilesketches.py  requirements.txt
compilesketches/tests/: .coveragerc  pytest.ini  requirements.txt  test_compilesketches.py
compilesketches/tests/testdata/: githubevent.json
compilesketches/tests/testdata/test_get_issues_from_output/: has-issues.txt  no-issues.txt
compilesketches/tests/testdata/test_get_warning_count_from_output/: has-warnings.txt  no-warnings.txt
docs/: FAQ.md
etc/: codespell-ignore-words-list.txt
reportsizetrends/: .flake8  reportsizetrends.py  requirements.txt
reportsizetrends/tests/: pytest.ini  test_reportsizetrends.py
reportsizetrends/tests/testdata/sketches-report/: foo-bar-baz.json
