[tool.black]
line-length = 120

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "3.12.4"
GitPython = "3.1.45"
PyGithub = "2.8.1"
PyYAML = "6.0.3"
semver = "3.0.4"

[tool.poetry.group.dev.dependencies]
black = "25.12.0"
codespell = "2.4.1"
coverage = "7.12.0"
pytest = "9.0.1"
pytest-mock = "3.15.1"
flake8 = "7.3.0"
pep8-naming = "0.15.1"
yamllint = "1.37.1"

[tool.poetry.group.external]
# Provided only for use by boards platforms
# NOTE: This group is a temporary workaround that will be removed at the 2.0.0 release of the action.
optional = true

[tool.poetry.group.external.dependencies]
pyserial = "3.5"

# The dependencies in this group are installed using pipx; NOT Poetry. The use of a `poetry` section is a hack required
# in order to be able to manage updates of these dependencies via Dependabot, as used for all other dependencies.
[tool.poetry.group.pipx]
optional = true

[tool.poetry.group.pipx.dependencies]
poetry = "2.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
